--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <div class="header_middle">
+        <div class="header_middle py-2">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -48,7 +48,50 @@
                             <h1>Khanpur High School</h1>
                         </div>
                         <div class="sub_title">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Knowledge Is Power</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header_bottom py-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="nav_item">
+                            <ul class="d-flex align-items-center justify-content-center flex-wrap gap-3">
+                                <li>
+                                    <a href="">Home</a>
+                                </li>
+                                <li>
+                                    <a href="">About</a>
+                                </li>
+                                <li>
+                                    <a href="">Administration</a>
+                                </li>
+                                <li>
+                                    <a href="">Admission</a>
+                                </li>
+                                <li>
+                                    <a href="">Student</a>
+                                </li>
+                                <li>
+                                    <a href="">Result</a>
+                                </li>
+                                <li>
+                                    <a href="">Notice</a>
+                                </li>
+                                <li>
+                                    <a href="">Gallery</a>
+                                </li>
+                                <li>
+                                    <a href="">Event</a>
+                                </li>
+                                <li>
+                                    <a href="">contact</a>
+                                </li>
+                                
+                            </ul>
                         </div>
                     </div>
                 </div>
