--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                     </div>
                     <div class="col-md-4">
                         <div class="timestamp text-center">
-                            <span>Wed,Jan 22,2025|Current Time: 10:01:15 PM (BST)</span>
+                            
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="contact_info text-end">
-                            <a href="" class="phone me-2">+8801747778387</a>
-                            <a href="" class="email">info@gmail.com</a>
+                        <div class="contact_info text-end ">
+                            <a href="" class="phone me-1"><i class="fa-solid fa-phone me-2"></i>+8801747778387</a>
+                            <a href="" class="email"><i class="fa-solid fa-envelope me-2"></i>info@kphs.edu.bd</a>
                         </div>
                     </div>
                 </div>
@@ -45,21 +45,21 @@
                             </a>
                         </div>
                         <div class="title">
-                            <h1>Khanpur High School</h1>
+                            <h1 class="fs-3">Khanpur High School</h1>
                         </div>
                         <div class="sub_title">
-                            <p>Knowledge Is Power</p>
+                            <p class="text-muted">Knowledge Is Power</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="header_bottom py-2">
+        <div class="header_bottom ">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <div class="nav_item">
-                            <ul class="d-flex align-items-center justify-content-center flex-wrap gap-3">
+                            <ul class="d-flex align-items-center  flex-wrap gap-3">
                                 <li>
                                     <a href="">Home</a>
                                 </li>
