--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
     <title>Home school website</title>
 </head>
 <body>
+
+    <div class="my_chat_box">
+        
+        <div class="messagr_box">
+            <div class="card">
+                <div class="card-header">
+                    <h1>your message here ...</h1>
+                </div>
+                <div class="card-body">
+                    <div class="message">
+                        
+                    </div>   
+                </div>
+                <div class="card-footer">
+                    <form action="">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="type your message here...">
+                            <button class="btn btn-primary">send</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="chat_icon">
+            <i class="fa-brands fa-whatsapp"></i>
+        </div> 
+    </div>
     <header class="header">
         <div class="header_top py-2 d-none d-lg-block">
             <div class="container">
@@ -77,8 +104,13 @@
                                 <li>
                                     <a href="">Home</a>
                                 </li>
-                                <li>
-                                    <a href="">About</a>
+                                <li class="dropdwn">
+                                    <a href="javascript:void(0)">About</a>
+                                    <ul class="dropdwn_menu">
+                                        <li><a href="">About us</a></li>
+                                        <li><a href="">Our mission</a></li>
+                                        <li><a href="">our vission</a></li>
+                                    </ul>
                                 </li>
                                 <li>
                                     <a href="">Administration</a>
