--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <i class="fa-brands fa-whatsapp"></i>
         </div> 
     </div>
+
     <header class="header">
         <div class="header_top py-2 d-none d-lg-block">
             <div class="container">
@@ -190,10 +191,37 @@
             </div>
         </div>
     </header>
-    <main>
-        <div class="bg-primary" style="width : 100%;height: 880px;">
 
-        </div>
+
+    <main class="bg-primary" style="width : 100%;height: 880px;">
+        <section class="faq_section py-5 my-5" style="height: 150vh; background-color: rgb(212,212,212);">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 ">
+                        <div class="section_header text-center  py-5">
+                            <h2>Frequently Asked Question</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aut, tempore hic velit temporibus reprehenderit.</p>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="faq_wraper">
+                            <div class="faq_item">
+                                <div class="faq_title">
+                                    <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, quaerat.</h3>
+                                    <div class="faq_arrow">
+                                        <i class="fa-solid fa-angle-up"></i>
+                                    </div>
+                                </div>
+                                <div class="faq_description">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit magni quaerat architecto. Nobis, est? Unde maxime ducimus sed, rem pariatur velit molestias nostrum esse facilis dolore eveniet, sapiente veritatis aperiam rerum a molestiae nesciunt quasi quos doloremque soluta nisi nihil animi! Hic repudiandae repellendus dolores veritatis corporis distinctio reiciendis sequi.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer></footer>
 
