--- a/index.html
+++ b/index.html
@@ -208,6 +208,30 @@
                             <div class="faq_item">
                                 <div class="faq_title">
                                     <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, quaerat.</h3>
+                                    
+                                    <i class="fa-solid fa-angle-up faq_arrow"></i>
+                                    
+                                </div>
+                                <div class="faq_description">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit magni quaerat architecto. Nobis, est? Unde maxime ducimus sed, rem pariatur velit molestias nostrum esse facilis dolore eveniet, sapiente veritatis aperiam rerum a molestiae nesciunt quasi quos doloremque soluta nisi nihil animi! Hic repudiandae repellendus dolores veritatis corporis distinctio reiciendis sequi.</p>
+                                </div>
+                            </div>
+
+                            <div class="faq_item">
+                                <div class="faq_title">
+                                    <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, quaerat.</h3>
+                                    <div class="faq_arrow">
+                                        <i class="fa-solid fa-angle-up"></i>
+                                    </div>
+                                </div>
+                                <div class="faq_description">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit magni quaerat architecto. Nobis, est? Unde maxime ducimus sed, rem pariatur velit molestias nostrum esse facilis dolore eveniet, sapiente veritatis aperiam rerum a molestiae nesciunt quasi quos doloremque soluta nisi nihil animi! Hic repudiandae repellendus dolores veritatis corporis distinctio reiciendis sequi.</p>
+                                </div>
+                            </div>
+
+                            <div class="faq_item">
+                                <div class="faq_title">
+                                    <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, quaerat.</h3>
                                     <div class="faq_arrow">
                                         <i class="fa-solid fa-angle-up"></i>
                                     </div>
